--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,8 +1,12 @@
 @use "./utilities" as *;
 
-
-
 body {
-	background-color: $green;
+	background-color: $blue;
 }
-// namespace.$variable
+div {
+	width: 200px;
+	height: 200px;
+	color: $green;
+	font-size: 26px;
+	appearance: none;
+}
