--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,14 +1,11 @@
-
-
 body {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	background-color: royalblue;
 }
-div {
-	width: 200px;
-	height: 200px;
-	color: lime;
-	font-size: 26px;
-	appearance: none;
-	background-clip: text;
-	user-select: none;
+p {
+	font-family: sans-serif;
+	font-size: 48px;
+	color: #000;
 }
