--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -2,7 +2,7 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background-color: royalblue;
+	background-color: rgb(52, 94, 220);
 }
 p {
 	font-family: sans-serif;
