--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,11 +1,31 @@
 body {
+	height: 100vh;
 	display: flex;
-	justify-content: center;
+	justify-content: space-between;
 	align-items: center;
-	background-color: rgb(52, 94, 220);
+	flex-direction: column;
+	background-color: rgb(255, 255, 255);
 }
 p {
 	font-family: sans-serif;
 	font-size: 48px;
 	color: rgb(0, 0, 0);
+}
+nav {
+	width: 100%;
+	background-color: royalblue;
+	ul {
+		display: flex;
+		justify-content: space-around;
+	}
+}
+
+footer {
+	width: 100%;
+	background-color: black;
+	display: flex;
+	justify-content: center;
+	p {
+		color: white;
+	}
 }
